--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
+    "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "client": "file:",
